--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,45 @@
 name: BUQEYE
-theme: jekyll-theme-slate
+# theme: jekyll-theme-slate
+remote_theme: "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "air" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
+# Reading Files
+include:
+  - _pages # Be sure Jekyll "sees" and processes the files inside of _pages
+
+
+# Collections
+collections:
+  talks:
+    output: true
+    permalink: /:collection/:path/
+
+
+defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      mathjax: true
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      mathjax: true
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+  # _talks
+  - scope:
+      path: ""
+      type: talks
+    values:
+      layout: talk
+      mathjax: true
+      author_profile: true
