--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Dick Furnstahl:
   name: "Dick Furnstahl"
-  email: "email@osu.edu"
+  email: "furnstahl.1@osu.edu"
   avatar: "/assets/images/furnstahl2_21Jun2017_headshot.jpg"
   bio: "The boss"
 
