--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 name: BUQEYE
 # theme: jekyll-theme-slate
-remote_theme: "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "sunrise" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+#remote_theme: "mmistakes/minimal-mistakes"
+#minimal_mistakes_skin    : "sunrise" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+theme: jekyll-theme-cayman
+
+
 
 title: "<i class='fab fa-lg fa-github' aria-hidden='true'></i> BUQEYE Collaboration"
 
