--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 name: BUQEYE
-# theme: jekyll-theme-slate
-#remote_theme: "mmistakes/minimal-mistakes"
-#minimal_mistakes_skin    : "sunrise" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
+remote_theme: "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 
 
