--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 name: BUQEYE
 # theme: jekyll-theme-cayman
 remote_theme: "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "air" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 
 
-title: "<i class='fab fa-lg fa-github' aria-hidden='true'></i> BUQEYE Collaboration"
+#title: "<i class='fab fa-lg fa-github' aria-hidden='true'></i> BUQEYE Collaboration"
+title: "BUQEYE Collaboration"
 
 # Reading Files
 include:
