--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,6 @@ main:
     url: /publications/
   - title: Talks
     url: /talks/
-  - title: Links
-    url: /links/
+  - title: Software
+    url: /software/
 
