adjustments to member page

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,6 +6,7 @@ Dick Furnstahl:
   avatar: "/assets/images/furnstahl2_21Jun2017_headshot.jpg"
   bio: "Professor of Physics at Ohio State University, Columbus, Ohio, USA"
   founder: ""
+  homepage: "https://www.asc.ohio-state.edu/furnstahl.1/"
 
 Jordan Melendez:
   name: "Jordan Melendez"
