test of founders tag

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,6 +5,7 @@ Dick Furnstahl:
   email: "furnstahl.1@osu.edu"
   avatar: "/assets/images/furnstahl2_21Jun2017_headshot.jpg"
   bio: "Professor of Physics at Ohio State University, Columbus, Ohio, USA"
+  founder: "True"
   homepage: "https://www.asc.ohio-state.edu/furnstahl.1/"
 
 Jordan Melendez:
