added department for Sarah

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,7 +24,7 @@ Sarah Wesolowski:
   name: "Sarah Wesolowski"
   email: "scwesolowski@salisbury.edu"
   avatar: "/assets/images/scwesolowski.jpg"
-  bio: "Assistant Professor at Salisbury University, Salisbury, Maryland, USA"
+  bio: "Assistant Professor of Mathematics at Salisbury University, Salisbury, Maryland, USA"
   founder: "True"
 
 # Example with all possible attributes
