--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,7 +11,9 @@ Dick Furnstahl:
 Jordan Melendez:
   name: "Jordan Melendez"
   email: "melendez.27@buckeyemail.osu.edu"
+  avatar: "/assets/images/Melendez_Jordan.jpg"
   bio: "Graduate student at Ohio State University, Columbus, Ohio, USA"
+  homepage: ""
 
 Daniel Phillips:
   name: "Daniel Phillips"
@@ -19,6 +21,7 @@ Daniel Phillips:
   bio: "Professor of Physics at Ohio University, Athens, Ohio, USA"
   avatar: "/assets/images/PHILLIPS_Daniel-480x281px_cropped.jpg"
   founder: "True"
+  homepage: "https://www.ohio.edu/cas/phillid1"
 
 Sarah Wesolowski:
   name: "Sarah Wesolowski"
@@ -26,6 +29,7 @@ Sarah Wesolowski:
   avatar: "/assets/images/scwesolowski.jpg"
   bio: "Assistant Professor of Mathematics at Salisbury University, Salisbury, Maryland, USA"
   founder: "True"
+  homepage: "http://faculty.salisbury.edu/~scwesolowski/"
 
 # Example with all possible attributes
 # author:
