--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,6 +8,13 @@ Dick Furnstahl:
   founder: "True"
   homepage: "https://www.asc.ohio-state.edu/furnstahl.1/"
 
+Christian Drischler:
+  name: "Christian Drishler"
+  email: "cdrischler@berkeley.edu"
+  avatar: "/assets/images/drischler.jpg"
+  bio: "Lynen Fellow, Humboldt Foundation, at LBL, Berkeley, CA, USA"
+  homepage: "https://nt.lbl.gov/members/postdoctoral-fellows/christian-drischler"
+
 Natalie Klco:
   name: "Natalie Klco"
   email: "klcon@uw.edu"
