--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,6 +15,14 @@ Christian Drischler:
   bio: "Lynen Fellow, Humboldt Foundation, at LBL, Berkeley, CA, USA"
   homepage: "https://nt.lbl.gov/members/postdoctoral-fellows/christian-drischler"
 
+Harald Griesshammer:
+  name: "Harald Grie&szlig;hammer"
+  email: "hgrie@gwu.edu"
+  avatar: "/assets/images/hgrie2016.jpg"
+  bio: "Associate Professor for Theoretical Nuclear Physics and CCAS Dean's Research Chair at George Washington University, Washington, DC, USA"
+  homepage: "https://home.gwu.edu/~hgrie/"
+
+
 Natalie Klco:
   name: "Natalie Klco"
   email: "klcon@uw.edu"
