--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -46,6 +46,13 @@ Daniel Phillips:
   founder: "True"
   homepage: "https://www.ohio.edu/cas/phillid1"
 
+Matt Pratola:
+  name: "Matt Pratola"
+  email: "mpratola@stat.osu.edu"
+  bio: "Associate Professor of Statistics at Ohio State University, Columbus, OH, USA"
+  avatar: "/assets/images/Pratola_Matt.jpg"
+  homepage: "http://www.matthewpratola.com"
+
 Sarah Wesolowski:
   name: "Sarah Wesolowski"
   email: "scwesolowski@salisbury.edu"
