--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,7 @@ Dick Furnstahl:
   homepage: "https://www.asc.ohio-state.edu/furnstahl.1/"
 
 Christian Drischler:
-  name: "Christian Drishler"
+  name: "Christian Drischler"
   email: "cdrischler@berkeley.edu"
   avatar: "/assets/images/drischler.jpg"
   bio: "Lynen Fellow, Humboldt Foundation, at LBL, Berkeley, CA, USA"
