--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 name: BUQEYE
+
+markdown: kramdown
 # theme: jekyll-theme-cayman
 remote_theme: "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "air" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
