updated JM info

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -33,9 +33,9 @@ Natalie Klco:
 
 Jordan Melendez:
   name: "Jordan Melendez"
-  email: "melendez.27@buckeyemail.osu.edu"
+  email: "jmelendez1992@gmail.com"
   avatar: "/assets/images/Melendez_Jordan.jpg"
-  bio: "Graduate student at Ohio State University, Columbus, OH, USA"
+  bio: "Data Scientist at Root Insurance Company, Columbus, OH, USA"
   homepage: ""
 
 Daniel Phillips:
