updated Christain info, added talk, fixed arXiv reference, added in press

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,9 +2,9 @@
 
 Christian Drischler:
   name: "Christian Drischler"
-  email: "cdrischler@berkeley.edu"
+  email: "drischler@frib.msu.edu"
   avatar: "/assets/images/drischler.jpg"
-  bio: "Lynen Fellow, Humboldt Foundation, at LBL, Berkeley, CA, USA"
+  bio: "FRIB Theory Fellow, FRIB at MSU, East Lansing, MI, USA "
   homepage: "https://nt.lbl.gov/members/postdoctoral-fellows/christian-drischler"
 
 Dick Furnstahl:
