updated Natalie bio

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -25,10 +25,10 @@ Harald Griesshammer:
 
 Natalie Klco:
   name: "Natalie Klco"
-  email: "klcon@uw.edu"
+  email: "natklco@caltech.edu"
   founder: "True"
   avatar: "/assets/images/Klco_Natalie.jpg"
-  bio: "Graduate student at the University of Washington, Seattle, WA, USA"
+  bio: "Sherman Fairchild Postdoctoral Scholar Research Associate in Theoretical Physics at CalTech, USA"
   homepage: "https://nklco.yolasite.com"
 
 Jordan Melendez:
