updated Natalie bio

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -28,7 +28,7 @@ Natalie Klco:
   email: "natklco@caltech.edu"
   founder: "True"
   avatar: "/assets/images/Klco_Natalie.jpg"
-  bio: "Sherman Fairchild Postdoctoral Scholar Research Associate in Theoretical Physics at CalTech, USA"
+  bio: "Sherman Fairchild Postdoctoral Scholar Research Associate in Theoretical Physics at CalTech, Pasadena, CA, USA"
   homepage: "https://nklco.yolasite.com"
 
 Jordan Melendez:
