updates CD's contact info

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,10 +2,10 @@
 
 Christian Drischler:
   name: "Christian Drischler"
-  email: "drischler@frib.msu.edu"
+  email: "drischler@ohio.edu"
   avatar: "/assets/images/drischler.jpg"
-  bio: "FRIB Theory Fellow, FRIB at MSU, East Lansing, MI, USA "
-  homepage: "https://nt.lbl.gov/members/postdoctoral-fellows/christian-drischler"
+  bio: "Assistant Professor of Physics at Ohio University, Athens, OH, USA"
+  homepage: "https://github.com/cdrischler"
 
 Dick Furnstahl:
   name: "Dick Furnstahl"
