--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -63,10 +63,10 @@ Sarah Wesolowski:
 
 Xilin Zhang:
   name: "Xilin Zhang"
-  email: "zhang.10038@osu.edu"
+  email: "zhangx@frib.msu.edu"
   avatar: "/assets/images/Zhang_Xilin.jpg"
-  bio: "Postdoc at Ohio State University, Columbus, OH, USA"
-  homepage: ""
+  bio: "FRIB-TA fellow, Facility for Rare Isotope Beams, Michigan State University, East Lansing, MI, USA"
+  homepage: "https://inspirehep.net/authors/1266206?ui-citation-summary=true"
 
 # Example with all possible attributes
 # author:
